# phasegrad

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: hillenbrand_vowels.csv
examples/: compare_baseline.py  train_vowel_binary.py  verify_theorem.py
experiments/: ablation.py  ablation_100seeds.py  ablation_100seeds_results.json  ablation_ou.py  ablation_ou_results.json  ablation_results.json  adaptive_bank.py  adaptive_bank_results.json  adaptive_bank_v2.py  adaptive_bank_v2_results.json  architecture_sweep_results.json  asymmetry_results.json  asymmetry_sweep.py  autograd_verification_results.json  convergence_diagnosis.json  convergence_diagnosis.py  convergence_matrix.py  convergence_matrix_results.json  finite_beta_results.json  finite_beta_verification.py  fm_demodulation.py  fm_demodulation_results.json  fm_oscillator_bank.py  fm_oscillator_bank_results.json  fm_raw.py  fm_raw_results.json  forced_gradient_verification.json  forced_gradient_verification.py  forced_gradient_verification_extended.json  gradient_validation_clean.py  gradient_validation_clean_results.json  k_matrix_comparison.py  k_matrix_comparison_results.json  k_only_lr_sweep.py  k_only_lr_sweep_results.json  lr_ratio_sweep.py  omega_only_lr_sweep.py  omega_only_lr_sweep_results.json  oscillator_activation.py  oscillator_activation_results.json  (+20 more)
paper/: RESULTS_INVENTORY.md  generate_figures.py  main.tex
phasegrad/: __init__.py  autograd_verify.py  data.py  forced.py  gradient.py  kuramoto.py  losses.py  seeding.py  training.py  verification.py
tests/: test_analytical.py  (+10 more)
