[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phasegrad"
version = "0.1.0"
description = "Phase-Gradient Duality: backpropagation-free learning in coupled oscillator networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scikit-learn>=1.2"]
plots = ["matplotlib>=3.7"]
autograd = ["torch>=2.0"]
all = ["scikit-learn>=1.2", "matplotlib>=3.7", "torch>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phasegrad*"]

[tool.setuptools.package-data]
"*" = ["data/*.csv"]
